--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -136,9 +136,10 @@
     </div>
 </div>
 
-{% include 'bot_settings_modal.html' %}
-{% include 'load_data_modal.html' %}
-{% include 'game_over_modal.html' %}
+{% include 'modals/bot_settings.html' %}
+{% include 'modals/load_data.html' %}
+{% include 'modals/game_over.html' %}
+{% include 'modals/invalid_fen.html' %}
 {% endblock %}
 
 {% block scripts %}
