--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -147,5 +147,6 @@
 <script src="{{ url_for('static', filename='js/stockfish_manager.js') }}"></script>
 <script src="{{ url_for('static', filename='js/opening_data.js') }}"></script>
 <script src="{{ url_for('static', filename='js/logic_game.js') }}"></script>
+<script src="{{ url_for('static', filename='js/timer_manager.js') }}"></script>
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 {% endblock %}
