--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -149,5 +149,6 @@
 <script src="{{ url_for('static', filename='js/logic_game.js') }}"></script>
 <script src="{{ url_for('static', filename='js/timer_manager.js') }}"></script>
 <script src="{{ url_for('static', filename='js/chat_manager.js') }}"></script>
+<script src="{{ url_for('static', filename='js/vision_manager.js') }}"></script>
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 {% endblock %}
